--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <style>
         .equation {
-            font-size: 128pt;
+            font-size: 25.5vw;
             text-align: center;
         }
 
